syntax = "proto3";
package furynetwork.fury.orderbook;

import "gogoproto/gogo.proto";
import "fury/orderbook/params.proto";
import "fury/orderbook/orderbook.proto";
import "fury/orderbook/participation.proto";
import "fury/orderbook/stats.proto";
import "fury/orderbook/exposure.proto";

option go_package = "github.com/fanfury-sports/fury/x/orderbook/types";

// GenesisState defines the orderbook module's genesis state.
message GenesisState {
  // params defines all the parameters related to orderbook.
  Params params = 1 [ (gogoproto.nullable) = false ];

  // book_list defines the books active at genesis.
  repeated OrderBook book_list = 2 [ (gogoproto.nullable) = false ];

  // book_participation_list defines the book participations active at genesis.
  repeated BookParticipation book_participation_list = 3
      [ (gogoproto.nullable) = false ];

  // book_exposure_list defines the book exposures active at genesis.
  repeated BookOddsExposure book_exposure_list = 4
      [ (gogoproto.nullable) = false ];

  // participation_exposure_list defines the participation exposures active at
  // genesis.
  repeated ParticipationExposure participation_exposure_list = 5
      [ (gogoproto.nullable) = false ];

  // participation_exposure_by_index_list defines the participation exposures by
  // index active at genesis.
  repeated ParticipationExposure participation_exposure_by_index_list = 6
      [ (gogoproto.nullable) = false ];

  // historical_participation_exposure_list defines the historical participation
  // exposures active at
  // genesis.
  repeated ParticipationExposure historical_participation_exposure_list = 7
      [ (gogoproto.nullable) = false ];

  // historical_participation_exposure_list defines the historical participation
  // exposures active at
  // genesis.
  repeated ParticipationBetPair participation_bet_pair_exposure_list = 8
      [ (gogoproto.nullable) = false ];

  repeated bytes payout_lock = 9 [ (gogoproto.nullable) = false ];

  // stats is the statistics of the order-book
  OrderBookStats stats = 10 [ (gogoproto.nullable) = false ];
}
